# openapi/openapi.yaml
@@ -11,6 +11,8 @@ servers:
     description: Dev server
 
 tags:
+  - name: legalentities
+    description: Legal Entity management
   - name: about
     description: About information
   - name: health
@@ -24,10 +26,11 @@ tags:
   - name: task
     description: Tasks
 
+
 paths:
   /legal-entities:
     get:
-      tags: [federation]
+      tags: [legalentities]
       summary: Get all legal entities
       responses:
         200:
@@ -39,7 +42,7 @@ paths:
                 items:
                   $ref: '#/components/schemas/LegalEntityDTO'
     post:
-      tags: [federation]
+      tags: [legalentities]
       summary: Create legal entity
       requestBody:
         required: true
@@ -50,9 +53,13 @@ paths:
       responses:
         201:
           description: Legal entity created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LegalEntityDTO'
   /legal-entities/{uuid}:
     put:
-      tags: [federation]
+      tags: [legalentities]
       summary: Update legal entity
       parameters:
         - in: path
@@ -70,7 +77,7 @@ paths:
         200:
           description: Legal entity updated
     delete:
-      tags: [federation]
+      tags: [legalentities]
       summary: Delete legal entity
       parameters:
         - in: path
